--- a/demo/res/values-fr/strings.xml
+++ b/demo/res/values-fr/strings.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AppEngineClient Demo</string>
-    <string name="appengine_instance_name">monapplication</string>
-    <string name="connect">Connexion</string>
+    <string name="default_appspot_base">monapplication</string>
+    <string name="enter_appspot_instance_name">Entrez le nom de votre application :</string>
+    <string name="select_an_account">Sélectionnez un compte :</string>
+    <string name="missing_account">Veuillez sélectionner un compte</string>
+    <string name="connect">Connecter</string>
     <string name="connecting_to_appengine">Connexion en cours...</string>
-    <string name="error">Désolé</string>
+    <string name="error">Désolé !</string>
     <string name="quit">Quitter</string>
+    <string name="set_appspot_base">Modifier</string>
     <string name="no_account_error">Aucun compte Google trouvé !</string>
+    <string name="authentication_successful">Authentification réussie !</string>
     <string name="status_code_result">Code de réponse reçu : %1$d</string>
-    <string name="waiting_for_user_permission">En attente de permission de l\'utilisateur :
-        essayez plus tard !</string>
     <string name="network_error">Erreur réseau : %1$d</string>
     <string name="got_error">Erreur reçue : %1$s</string>
+    <string name="auth_error_title">Autorisation demandée</string>
+    <string name="auth_error_message">L\'application demande votre autorisation pour
+        utiliser votre compte.\nAcceptez l\'autorisation depuis la barre
+        de notification, puis recommencez.</string>
 </resources>
