--- a/demo/res/values/strings.xml
+++ b/demo/res/values/strings.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AppEngineClient Demo</string>
-    <string name="appengine_instance_name">myapplication</string>
+    <string name="default_appspot_base">myapplication</string>
+    <string name="enter_appspot_instance_name">Enter your application name:</string>
+    <string name="select_an_account">Select an account:</string>
+    <string name="missing_account">Please select an account</string>
     <string name="connect">Connect</string>
     <string name="connecting_to_appengine">Connecting...</string>
-    <string name="error">Sorry</string>
+    <string name="error">Sorry!</string>
     <string name="quit">Quit</string>
+    <string name="ok">OK</string>
+    <string name="set_appspot_base">Modify</string>
     <string name="no_account_error">No Google account found!</string>
+    <string name="authentication_successful">Authentication successful!</string>
     <string name="status_code_result">Got status code: %1$d</string>
-    <string name="waiting_for_user_permission">Waiting for user permission: try later!</string>
     <string name="network_error">Network error: %1$d</string>
     <string name="got_error">Got error: %1$s</string>
+    <string name="auth_error_title">Authorization required</string>
+    <string name="auth_error_message">The application needs your authorization in
+        order to use your account.\nLook at the notification bar to
+        accept this authorization and try again.</string>
 </resources>
