--- a/demo/res/values-fr/strings.xml
+++ b/demo/res/values-fr/strings.xml
@@ -18,5 +18,5 @@
     <string name="auth_error_title">Autorisation demandée</string>
     <string name="auth_error_message">L\'application demande votre autorisation pour
         utiliser votre compte.\nAcceptez l\'autorisation depuis la barre
-        de notification, puis recommencez.</string>
+        de notifications, puis recommencez.</string>
 </resources>
